samples/_failures_safe/1761520010_bd3657_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_97496ed4.c: In function ‘main’:
./samples/SAFE/__tmp_97496ed4.c:143:25: error: expected ‘;’ at end of input
  143 |             print_matrix
      |                         ^
      |                         ;
./samples/SAFE/__tmp_97496ed4.c:143:13: error: expected declaration or statement at end of input
  143 |             print_matrix
      |             ^~~~~~~~~~~~
./samples/SAFE/__tmp_97496ed4.c:143:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_97496ed4.c:143:13: error: expected declaration or statement at end of input
